# Sancti-Shop

./: .coderabbitai.yaml  .gitignore  PRD.md  README.md  create_test_user.py  pyproject.toml  run.sh
app/: main.py
app/api/: router.py
app/api/dependencies/: auth.py
app/api/endpoints/: admin_dashboard.py  admin_users.py  auth.py  cart.py  categories.py  orders.py  payments.py  products.py  upload.py
app/core/: config.py  limiter.py  security.py
app/db/: models.py  seed.py  session.py
app/middleware/: security_headers.py
app/schemas/: auth.py  cart.py  orders.py  payments.py  products.py  users.py
app/services/: auth.py  cart.py  categories.py  dashboard.py  orders.py  products.py  upload.py
app/services/payments/: __init__.py  adapter.py  enzona_provider.py  mock_provider.py  service.py
app/static/css/: app.css
app/static/js/: app.js  upload.js
app/templates/: base.html
app/templates/components/: navbar.html
app/templates/pages/: cart.html  checkout.html  index.html  login.html  orders.html  product_detail.html  profile.html  register.html
app/templates/pages/admin/: dashboard.html  orders.html  product_form.html  products.html  users.html
app/views/: __init__.py  router.py
tests/: test_admin_dashboard.py  test_auth.py  test_cart_phase3.py  test_checkout_and_orders_pages.py  test_coderabbit_config.py  test_config.py  test_orders_admin_route.py  test_orders_phase4.py  test_payments_phase41.py  test_products_phase2.py  test_security_headers.py
